--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start": "node dist",
     "watch": "babel --watch src --out-dir dist --copy-files",
     "dev": "nodemon dist",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
-  },
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+	},
   "keywords": [],
   "author": "",
   "license": "ISC",
