--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "node dist",
     "watch": "babel --watch src --out-dir dist --copy-files",
     "dev": "nodemon dist",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
 	},
   "keywords": [],
   "author": "",
