--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "node dist",
     "watch": "babel --watch src --out-dir dist --copy-files",
     "dev": "nodemon dist",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+		"heroku-postbuild": "npm run build"
+	},
+	"engines": {
+		"node": "12.15.3"
 	},
   "keywords": [],
   "author": "",
