--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "watch": "babel --watch src --out-dir dist --copy-files",
     "dev": "nodemon dist",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
-		"heroku-postbuild": "npm run build"
-	},
-	"engines": {
-		"node": "12.15.3"
-	},
+    "heroku-postbuild": "npm run build"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,6 +23,7 @@
     "express-session": "1.17.1",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.12.5",
+    "pug": "3.0.2",
     "uuid": "8.3.2"
   },
   "devDependencies": {
@@ -35,7 +33,6 @@
     "@babel/plugin-transform-runtime": "7.13.15",
     "@babel/preset-env": "7.13.15",
     "morgan": "1.10.0",
-    "nodemon": "2.0.7",
-    "pug": "3.0.2"
+    "nodemon": "2.0.7"
   }
 }
