--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "jsonwebtoken": "8.5.1",
     "mongoose": "5.12.5",
-    "pug": "3.0.2",
-    "uuid": "8.3.2"
+    "pug": "3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "7.13.16",
